--- a/XamIntro/XamIntro/Pages/FirstPage.xaml
+++ b/XamIntro/XamIntro/Pages/FirstPage.xaml
@@ -4,7 +4,7 @@
              x:Class="XamIntro.Pages.FirstPage">
   <StackLayout>
     <BoxView HorizontalOptions="FillAndExpand"
-             HeightReuest="100"
+             HeightRequest="100"
              x:Name="boxViewColor">
     </BoxView>
     <Label  Text="Text"
